# Torch_models

./: .dockerignore  .gitignore  Dockerfile  Makefile  main.py  pyproject.toml  save_exit.sh
models/: FD_test_model_ 154.0289.pt  FD_test_model_ 154.7137.pt  FD_test_model_ 157.0180.pt  FD_test_model_ 157.5025.pt  FD_test_model_ 157.8813.pt  FD_test_model_ 158.1977.pt  FD_test_model_ 159.0641.pt  FD_test_model_ 159.2461.pt  FD_test_model_ 159.4792.pt  FD_test_model_ 160.2131.pt  FD_test_model_ 161.4672.pt  FD_test_model_ 162.9521.pt  README.md  cifar10_model1.pt  cifar10_model_acc_ 81.pt  running.txt
modules/: __init__.py  download_data.py  path.py
modules/Cifar10/: Datasets.py  __init__.py  path.py  test.ipynb
modules/Face_detection/: Datasets.py  Face_detection_model.py  __init__.py  main.py
modules/Facial_keypoints/: Datasets.py  Facial_keypoints.py  __init__.py
modules/models/Cifar10/: Datasets.py  test.ipynb
modules/models/Cifar10/test/: dataload_test.py
modules/models/Facial_keypoints/: Datasets.py  Facial_keypoints.py  __init__.py
setup/: __init__.py  download_data.py
test/: argv_test.py  example.csv  test.py
