[project]
name = "Torch_Models"
version = "0.0.1"
description = "My torch models"
readme = "README.md"
requires-python = ">=3.11.13"
dependencies = [
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.6",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
